# cppProjects

./: README.md
AdvancedProjects/: TextBasedGamePlan.txt
AdvancedProjects/MainTextBasedGame/: MainStruct.h  MainTextBasedGame  MainTextBasedGame.cpp  MainTextBasedGame.sln  MainTextBasedGame.vcxproj  MainTextBasedGame.vcxproj.filters  a.out  enemy.h  player.h
AdvancedProjects/MainTextBasedGame/DevData/: Checklist.txt  ideas.txt
AdvancedProjects/snake/src/main/: main.cpp
Bank Management System/algoSpeedTester/: algo.cpp
BasicProjects/Bank Management System/: bms.cpp
BasicProjects/Calculator/: cal.cpp
BasicProjects/FtoC/: src.cpp
BasicProjects/algoSpeedTester/: algo.cpp
BasicProjects/latency detector/: latency.cpp
PhysicsEngine/: PhysicsEngine.cpp  PhysicsEngine.sln  PhysicsEngine.vcxproj  PhysicsEngine.vcxproj.filters
cppCompiler/compiler/: CMakeLists.txt  main.cpp  source.cpp
cppCompiler/compiler/IR_generation/: IRGenerator.cpp  IRGenerator.h
cppCompiler/compiler/codeGeneration/: CodeGenerator.cpp  CodeGenerator.h
cppCompiler/compiler/fckOptimization/: Optimizer.cpp  Optimizer.h
cppCompiler/compiler/lexicalAnalyzer/: Token.h  lexer.h  lexicalAnalyzer.cpp  main.cpp
cppCompiler/compiler/semanticAnalyzer/: semanticAnalyzer.cpp  semanticAnalyzer.h  symbolTable.cpp  symbolTable.h
cppCompiler/compiler/syntaxAnalyzer/: grammar.txt  parser.h  syntaxAnalyzer.cpp
cppCompiler/compiler/testing/: test.cpp
nmFear/: TestFilePointers.cpp  WTFisGoingOn.cpp  main.cpp
nmfearProject/: Makefile.win  main.cpp  nmfear.dev
(+26 files in other folders)
